added win screen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <script src='./js/main.js' async defer></script>
 </head>
 <body>
+    <div class='playerUI'>
+        <div class='health'></div>
+        <div class='gold'></div>
+    </div>
+    <div class='bossHealth'></div>
+
+    <div class='winScreen hidden'>
+        <div class='background'>
+            <h1 id='win'>You Win</h1>
+            <button class='main-menu'>Return to Main Menu</button>
+        </div>
+    </div>
+
     <div class='container'>
         <canvas></canvas>
     </div>
