added menus and UI

--- a/index.html
+++ b/index.html
@@ -16,13 +16,50 @@
     <div class='bossHealth'></div>
 
     <div class='winScreen hidden'>
-        <div class='background'>
+        <div class='winScreenBkgrnd'>
             <h1 id='win'>You Win</h1>
-            <button class='main-menu'>Return to Main Menu</button>
+            <button class='winReturn'>Return to Main Menu</button>
         </div>
     </div>
 
-    <div class='container'>
+    <div class='loseScreen hidden'>
+        <div id='loseScreenBkgrnd'>
+            <h1 id='lose'>Game Over</h1>
+            <button class='loseReturn'>Return to Main Menu</button>
+        </div>
+    </div>
+
+    <div class='mainMenu'>
+        <div id='mainMenuBkgrnd'>
+            <h1 id='title'>Demon's Respite</h1>
+            <h2 class='bar'>=======================================</h2>
+            <h3 class='summary'>A game of luck, skill, and determination, Demon's Respite will have you crawling through dungeons in search of better equipment and magical abilities. </h3>
+            <h2 class='bar'>=======================================</h2>
+            <h3 class='summary'>Be wary though, each dungeon is home to plenty of bizarre creatures, all of whom have one goal: keep you from reaching the Demon's chambers. Gear up and defeat enemies as you attempt to reach the center of the dungeon to slay the land's eternal plague, the Demon. </h3>
+
+            <button class='play-game'>Play Game</button>
+            <button class='controlsBtn'>How to Play</button>
+        </div>
+    </div>
+
+    <div class='controls hidden'>
+        <div class='top'>
+            <button class='return'>Main Menu</button>
+            <h1>How to Play</h1>
+        </div>
+        <h2 class='bar'>=======================================</h2>
+        <div id='controlScheme'>
+            <h2 id='controlsTitle'>Controls:</h1>
+            <img src='./assets/images/control-scheme.PNG'>
+        </div>
+        <h2 class='bar'>=======================================</h2>
+        <div id='gamePlan'>
+            <h2 id='planTitle'>Game Plan:</h1>
+            <img src='./assets/images/game-plan.PNG'>
+        </div>
+    </div>
+
+    <div class='gameplay hidden'>
         <canvas></canvas>
     </div>
 </body>
