--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class='mainMenu'>
         <div id='mainMenuBkgrnd'>
-            <h1 id='title'>Demon's Respite</h1>
+            <h1 id='title'> Welcome to Demon's Respite</h1>
             <h2 class='bar'>=======================================</h2>
             <h3 class='summary'>A game of luck, skill, and determination, Demon's Respite will have you crawling through dungeons in search of the Demon, a dark creature who deals in reanimating the dead and preying on the weak. </h3>
             <h2 class='bar'>=======================================</h2>
@@ -39,34 +39,34 @@
     <div class='controls hidden'>
         <div class='top'>
             <button class='return'>Main Menu</button>
-            <h1>How to Play</h1>
+            <h2>How to Play</h2>
         </div>
-        <h2 class='bar'>=======================================</h2>
+        <h2 class='bar'>==================================</h2>
         <div id='controlScheme'>
-            <h2 id='controlsTitle'>Controls:</h1>
-            <img src='./assets/images/control-scheme.PNG'>
+            <h4 id='controlsTitle'>Controls:</h4>
+            <img id='controlsImg' src='./assets/images/control-scheme.PNG'>
         </div>
-        <h2 class='bar'>=======================================</h2>
+        <h2 class='bar'>==================================</h2>
         <div id='gamePlan'>
-            <h2 id='planTitle'>Game Plan:</h1>
-            <img src='./assets/images/game-plan.PNG'>
+            <h4 id='planTitle'>Game Plan:</h4>
+            <img id='gamePlanImg' src='./assets/images/game-plan.PNG'>
         </div>
     </div>
 
     <div class='gameMenuControls hidden'>
         <div class='top'>
             <button class='gameMenuControlsReturn'>Return</button>
-            <h1>How to Play</h1>
+            <h2>How to Play</h2>
         </div>
         <h2 class='bar'>=======================================</h2>
         <div id='controlScheme'>
-            <h2 id='controlsTitle'>Controls:</h1>
-            <img src='./assets/images/control-scheme.PNG'>
+            <h4 id='controlsTitle'>Controls:</h4>
+            <img id='gameMenuControlsImg' src='./assets/images/control-scheme.PNG'>
         </div>
         <h2 class='bar'>=======================================</h2>
         <div id='gamePlan'>
-            <h2 id='planTitle'>Game Plan:</h1>
-            <img src='./assets/images/game-plan.PNG'>
+            <h4 id='planTitle'>Game Plan:</h4>
+            <img id='gameMenuGamePlanImg' src='./assets/images/game-plan.PNG'>
         </div>
     </div>
 
