--- a/index.html
+++ b/index.html
@@ -79,10 +79,17 @@
 
         <canvas></canvas>
     </div>
-
+    
     <div class='gameMenu hidden'>
         <button class='gameMenuControlsButton'>How to Play</button>
         <button class='gameMenuReturn'>Return to Main Menu</button>
     </div>
+
+    <audio style='display: none' id='bkgrndMusic' src='./assets/audio/background-music.mp3'></audio>
+    <audio style='display: none' id='attackAudio' src='./assets/audio/player-attack.mp3'></audio>
+    <audio style='display: none' id='hurtAudio' src='./assets/audio/player-hurt.mp3'></audio>
+    <audio style='display: none' id='slamAudio' src='./assets/audio/player-slam.mp3'></audio>
+    <audio style='display: none' id='blockAudio' src='./assets/audio/player-block.mp3'></audio>
+    <audio style='display: none' id='bossAudio' src='./assets/audio/boss-fight.mp3'></audio>
 </body>
 </html>
