fixed block freezing bug

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
     <audio style='display: none' id='attackAudio' src='./assets/audio/player-attack.mp3'></audio>
     <audio style='display: none' id='hurtAudio' src='./assets/audio/player-hurt.mp3'></audio>
     <audio style='display: none' id='slamAudio' src='./assets/audio/player-slam.mp3'></audio>
-    <audio style='display: none' id='block
-    Audio' src='./assets/audio/player-block.mp3'></audio>
+    <audio style='display: none' id='blockAudio' src='./assets/audio/player-block.mp3'></audio>
     <audio style='display: none' id='bossAudio' src='./assets/audio/boss-fight.mp3'></audio>
 </body>
 </html>
