--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div class='gameplay hidden'>
         <div class='playerUI'>
             <div class='health'></div>
+            <div class='abilityCooldown'></div>
             <div class='gold'></div>
         </div>
         <div class='bossHealth'></div>
