--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class='playerUI'>
             <div class='health'></div>
             <div class='abilityCooldown'></div>
+            <div class='timeUI'></div>
             <div class='gold'></div>
         </div>
         <div class='bossHealth'></div>
