now displays final score

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class='winScreen hidden'>
         <div class='winScreenBkgrnd'>
             <h1 id='win'>You Win</h1>
+            <div class='winFinalScore'></div>
             <button class='winReturn'>Return to Main Menu</button>
         </div>
     </div>
@@ -19,6 +20,7 @@
     <div class='loseScreen hidden'>
         <div id='loseScreenBkgrnd'>
             <h1 id='lose'>Game Over</h1>
+            <div class='loseFinalScore'></div>
             <button class='loseReturn'>Return to Main Menu</button>
         </div>
     </div>
