fixed game plan bugs

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2 class='bar'>==================================</h2>
         <div id='gamePlan'>
             <h4 id='planTitle'>Game Plan:</h4>
-            <img id='gamePlanImg' src='./assets/images/game-plan.PNG'>
+            <img id='gamePlanImg' src='./assets/images/gameplan.PNG'>
         </div>
     </div>
 
@@ -85,7 +85,7 @@
         <h2 class='bar'>=======================================</h2>
         <div id='gamePlan'>
             <h4 id='planTitle'>Game Plan:</h4>
-            <img id='gameMenuGamePlanImg' src='./assets/images/game-plan.PNG'>
+            <img id='gameMenuGamePlanImg' src='./assets/images/gameplan.PNG'>
         </div>
     </div>
 
